--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-anndata==0.10.5.post1
-matplotlib==3.8.3
-numba==0.59.0
-numpy==1.23.4
-pandas==2.2.1
-scanpy==1.9.8
-scikit-learn==1.4.1.post1
-scipy==1.12.0
-seaborn==0.13.2
-squidpy==1.4.1
-torch==2.2.1
+anndata
+matplotlib
+numba
+numpy
+pandas
+scanpy
+scikit-learn
+scipy
+seaborn
+squidpy
+
